# ai-newsletter

./: .gitignore  README.md  TelecomX_Newsletter_Generator_project.pptx  app.py  generate_newsletter.py  llm_summarizer.py  mlflow_tracker.py  mlflow_ui.py  pipeline.py  process_analyze.py  pyproject.toml  ragas_evaluator.py
.github/workflows/: scheduler.yml
data/: llm_summaries_cache.json  published_ids.json
mlruns/0/: meta.yaml
mlruns/225821103475832887/: meta.yaml
mlruns/225821103475832887/b1068d0597c647e8bfdf7acf5710f07f/: meta.yaml
mlruns/225821103475832887/b1068d0597c647e8bfdf7acf5710f07f/tags/: mlflow.runName
newsletter_outputs/: llmops_newsletter_2026-05-07.md  llmops_newsletter_2026-05-07_backup.md  llmops_newsletter_2026-05-10.md  llmops_newsletter_2026-05-14.md  llmops_newsletter_2026-05-17.md  llmops_newsletter_2026-05-21.md  llmops_newsletter_2026-05-28.md  llmops_newsletter_2026-06-11.md  llmops_newsletter_2026-06-18.md  llmops_newsletter_2026-06-25.md
pages/: explore.py
