[project]
name = "ai-weeklynewsletter-generator"
version = "0.1.0"
description = "Automated pipeline to ingest AI/LLM content and generate a weekly internal newsletter."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "datasets>=4.8.0",
  "langchain-openai>=1.2.1",
  "mlflow>=3.12.0",
  "openai>=2.35.1",
  "pandas>=2.2.0",
  "pyarrow>=15.0.0",
  "python-dotenv>=1.2.2",
  "ragas>=0.4.3",
  "streamlit>=1.30.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
py-modules = []
